# steering

./: .gitignore  AGENTS.md  BACKLOG.org  README.md  flake.nix  pyproject.toml
resources/: default-config.yaml
resources/hooks/: pre-commit  pre-commit-manual  pre-commit-nix
steering/generators/: cli.py  config.py  generator.py  models.py  skills.py
steering/generators/adapters/: __init__.py  claude.py  codex.py  continue_dev.py  copilot.py  cursor.py  gemini.py
